--- a/config
+++ b/config
@@ -1,13 +1,13 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 4.19.26-2 Kernel Configuration
+# Linux/x86 4.19.38-1 Kernel Configuration
 #
 
 #
-# Compiler: gcc (GCC) 8.2.1 20181127
+# Compiler: gcc (GCC) 8.3.0
 #
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=80201
+CONFIG_GCC_VERSION=80300
 CONFIG_CLANG_VERSION=0
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
@@ -4067,6 +4067,7 @@ CONFIG_N_HDLC=m
 CONFIG_N_GSM=m
 CONFIG_TRACE_ROUTER=m
 CONFIG_TRACE_SINK=m
+CONFIG_LDISC_AUTOLOAD=y
 CONFIG_DEVMEM=y
 # CONFIG_DEVKMEM is not set
 
@@ -4153,7 +4154,6 @@ CONFIG_HW_RANDOM_AMD=m
 CONFIG_HW_RANDOM_VIA=m
 CONFIG_HW_RANDOM_VIRTIO=m
 CONFIG_NVRAM=m
-CONFIG_R3964=m
 CONFIG_APPLICOM=m
 
 #
@@ -7976,8 +7976,11 @@ CONFIG_THINKPAD_ACPI_VIDEO=y
 CONFIG_THINKPAD_ACPI_HOTKEY_POLL=y
 CONFIG_SURFACE_ACPI=m
 CONFIG_SURFACE_ACPI_SSH=y
+CONFIG_SURFACE_ACPI_SSH_DEBUG_DEVICE=y
 CONFIG_SURFACE_ACPI_SAN=y
 CONFIG_SURFACE_ACPI_VHF=y
+CONFIG_SURFACE_ACPI_DTX=y
+CONFIG_SURFACE_ACPI_SID=y
 CONFIG_SENSORS_HDAPS=m
 CONFIG_INTEL_MENLOW=m
 CONFIG_EEEPC_LAPTOP=m
