--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 4.19.59-1 Kernel Configuration
+# Linux/x86 4.19.61-1 Kernel Configuration
 #
 
 #
@@ -8054,6 +8054,7 @@ CONFIG_SONY_LAPTOP=m
 CONFIG_SONYPI_COMPAT=y
 CONFIG_IDEAPAD_LAPTOP=m
 CONFIG_SURFACE3_WMI=m
+CONFIG_SURFACE_BOOK2_DGPU_HPS=m
 CONFIG_THINKPAD_ACPI=m
 CONFIG_THINKPAD_ACPI_ALSA_SUPPORT=y
 # CONFIG_THINKPAD_ACPI_DEBUGFACILITIES is not set
