--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 4.19.71-2 Kernel Configuration
+# Linux/x86 4.19.74-1 Kernel Configuration
 #
 
 #
@@ -2363,6 +2363,7 @@ CONFIG_INTEL_MEI=m
 CONFIG_INTEL_MEI_ME=m
 CONFIG_INTEL_MEI_TXE=m
 CONFIG_INTEL_IPTS=m
+CONFIG_INTEL_IPTS_SURFACE=m
 CONFIG_VMWARE_VMCI=m
 
 #
@@ -3454,7 +3455,6 @@ CONFIG_MWIFIEX=m
 CONFIG_MWIFIEX_SDIO=m
 CONFIG_MWIFIEX_PCIE=m
 CONFIG_MWIFIEX_USB=m
-CONFIG_MWLWIFI=m
 CONFIG_MWL8K=m
 CONFIG_WLAN_VENDOR_MEDIATEK=y
 CONFIG_MT7601U=m
