--- a/config
+++ b/config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/x86 4.19.84 Kernel Configuration
+# Linux/x86 4.19.85 Kernel Configuration
 #
 
 #
@@ -2380,6 +2380,8 @@ CONFIG_ALTERA_STAPL=m
 CONFIG_INTEL_MEI=m
 CONFIG_INTEL_MEI_ME=m
 CONFIG_INTEL_MEI_TXE=m
+CONFIG_INTEL_IPTS=m
+CONFIG_INTEL_IPTS_SURFACE=m
 CONFIG_VMWARE_VMCI=m
 
 #
@@ -5541,6 +5543,7 @@ CONFIG_DVB_DDBRIDGE=m
 CONFIG_DVB_SMIPCIE=m
 CONFIG_DVB_NETUP_UNIDVB=m
 CONFIG_VIDEO_IPU3_CIO2=m
+CONFIG_VIDEO_IPU3_IMGU=m
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_VIDEO_CAFE_CCIC=m
 CONFIG_VIDEO_CADENCE=y
@@ -7984,6 +7987,7 @@ CONFIG_SONY_LAPTOP=m
 CONFIG_SONYPI_COMPAT=y
 CONFIG_IDEAPAD_LAPTOP=m
 CONFIG_SURFACE3_WMI=m
+CONFIG_SURFACE_BOOK2_DGPU_HPS=m
 CONFIG_THINKPAD_ACPI=m
 CONFIG_THINKPAD_ACPI_ALSA_SUPPORT=y
 # CONFIG_THINKPAD_ACPI_DEBUGFACILITIES is not set
@@ -8028,6 +8032,7 @@ CONFIG_INTEL_PMC_IPC=m
 CONFIG_INTEL_BXTWC_PMIC_TMU=m
 CONFIG_SURFACE_PRO3_BUTTON=m
 CONFIG_SURFACE_3_BUTTON=m
+CONFIG_SURFACE_3_POWER_OPREGION=m
 CONFIG_INTEL_PUNIT_IPC=m
 CONFIG_INTEL_TELEMETRY=m
 CONFIG_MLX_PLATFORM=m
@@ -8036,6 +8041,13 @@ CONFIG_TOUCHSCREEN_DMI=y
 CONFIG_INTEL_CHTDC_TI_PWRBTN=m
 CONFIG_I2C_MULTI_INSTANTIATE=m
 CONFIG_INTEL_ATOMISP2_PM=m
+CONFIG_SURFACE_SAM=m
+CONFIG_SURFACE_SAM_SSH=m
+CONFIG_SURFACE_SAM_SSH_DEBUG_DEVICE=y
+CONFIG_SURFACE_SAM_SAN=m
+CONFIG_SURFACE_SAM_VHF=m
+CONFIG_SURFACE_SAM_DTX=m
+CONFIG_SURFACE_SAM_SID=m
 CONFIG_PMC_ATOM=y
 CONFIG_CHROME_PLATFORMS=y
 CONFIG_CHROMEOS_LAPTOP=m
