--- a/trunk/PKGBUILD
+++ b/trunk/PKGBUILD
@@ -23,10 +23,10 @@ validpgpkeys=(
   '647F28654894E3BD457199BE38DBBDC86092693E'  # Greg Kroah-Hartman
 )
 # https://www.kernel.org/pub/linux/kernel/v4.x/sha256sums.asc
-sha256sums=('4aedca32eec13ac5103fc23e141f9221dfe120d1c0651c0a2efe7de2182f4fb0'
+sha256sums=('SKIP'
             'SKIP'
-            '4e68572e7cc4c5368f0236e0792660ae8498373988625dca46e509399a7eaea6'
-            'a13581d3c6dc595206e4fe7fcf6b542e7a1bdbe96101f0f010fc5be49f99baf2')
+            'SKIP'
+            'SKIP')
 
 export KBUILD_BUILD_HOST=archlinux
 export KBUILD_BUILD_USER=$pkgbase
